deployment/k8s/02_1_changelogs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: changelogs-pod
spec:
  restartPolicy: Never
  volumes:
    - name: changelogs-storage
      persistentVolumeClaim:
        claimName: changelogs-pv-claim
  containers:
    - name: changelogs-container
      image: ghcr.io/gardenlinux/glvd-changelogs-downloader
      volumeMounts:
        - mountPath: "/usr/src/app/changelogs"
          name: changelogs-storage
