deployment/k8s/01_glvd-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: glvd
  namespace: glvd
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: glvd
  selector:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glvd
  namespace: glvd
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glvd
      gardenlinux.io/glvd-component: glvd-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glvd
        gardenlinux.io/glvd-component: glvd-tracker
    spec:
      serviceAccountName: glvd-api-sa
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: ghcr.io/gardenlinux/glvd-api:2026.05.28
        imagePullPolicy: Always
        name: glvd-api
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - '*'
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        ports:
        - containerPort: 8080
          protocol: TCP
          name: glvd
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8080
        # Mount tmp as emptyDir so we can have readOnlyRootFilesystem as true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - name: tmp-volume
        emptyDir:
          sizeLimit: 500Mi
