deployment/k8s/04b_gardener-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glvd-api-ingress
  annotations:
    cert.gardener.cloud/purpose: managed
spec:
  rules:
  - host: api.ingress.glvd-prod.gardnlinux.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glvd
            port: 
              number: 8080
  tls:
  - hosts:
    - api.ingress.glvd-prod.gardnlinux.shoot.canary.k8s-hana.ondemand.com
    secretName: glvd-ingress-tls
